Correction overflow sur mobile

--- a/style.css
+++ b/style.css
@@ -21,10 +21,12 @@ body {
     width: 96%;
     max-width: 600px;
     min-width: 320px;
+    max-height: 86vh;
     padding: 10px;
     border-radius: 10px;
     background-color: rgb(172, 141, 95);
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.8) ;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
+    overflow: scroll;
 }
 
 .form {
